[package]
name = "vyper-client-rs"
version = "0.1.0"
authors = ["Brice Lloyd <support@vyper.trade>"]
edition = "2018"
description = "A Rust SDK for Vyper client"
license = "MIT"
repository = "https://github.com/Vyper-Terminal/vyper-client-rs"
homepage = "https://github.com/Vyper-Terminal/vyper-client-rs"
documentation = "https://docs.vyper.trade/"
readme = "README.md"
keywords = ["vyper", "sdk", "rust", "blockchain"]
categories = ["cryptography", "web-programming"]

[lib]
name = "vyper_client_rs"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio-test = "0.4"
async-trait = "0.1"
futures-util = "0.3"
anyhow = "1"
url = "2.2"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
dotenv = "0.15.0"
mockito = "0.31"
mockall = "0.11"
tokio-test = "0.4"